--- a/.github/actions/dotnet-pack-publish/action.yml
+++ b/.github/actions/dotnet-pack-publish/action.yml
@@ -13,6 +13,11 @@ runs:
   env:
     output_folder: ${{ github.workspace }}/output
   steps:
+    - name: Setup .NET
+      uses: actions/setup-dotnet@v2
+      with:
+        dotnet-version: 6.0.x
+        
     - name: Package
       shell: bash
       run: dotnet pack ${{ inputs.solution }} --configuration Release --output ${{ env.output_folder }}
