--- a/.github/workflows/build-test-pack-publish-nuget-package.yml
+++ b/.github/workflows/build-test-pack-publish-nuget-package.yml
@@ -22,11 +22,11 @@ jobs:
       uses: actions/checkout@v3
 
     - name: Build and test
-      uses: mdekok/reusable/.github/actions/dotnet-build-test@v0.4.3
+      uses: mdekok/reusable/.github/actions/dotnet-build-test@main
       with:
         target: ${{ inputs.solution }}
 
     - name: Pack and publish
-      uses: mdekok/reusable/.github/actions/dotnet-pack-publish@v0.4.3
+      uses: mdekok/reusable/.github/actions/dotnet-pack-publish@main
       with:
         solution: ${{ inputs.solution }}
