--- a/.github/actions/dotnet-pack-publish/action.yml
+++ b/.github/actions/dotnet-pack-publish/action.yml
@@ -7,9 +7,6 @@ inputs:
   pat:
     required: true
     description: 'Personal Access Token to push package.'
-    
-env:
-  output_folder: ${{ github.workspace }}/output
   
 runs:
   using: 'composite'
@@ -21,8 +18,8 @@ runs:
         
     - name: Package
       shell: bash
-      run: dotnet pack ${{ inputs.solution }} --configuration Release --output ${{ env.output_folder }}
+      run: dotnet pack ${{ inputs.solution }} --configuration Release --output publish_folder
 
     - name: Publish
       shell: bash
-      run: dotnet nuget push ${{ env.output_folder }}/*.nupkg --source https://nuget.pkg.github.com/mdekok/index.json --api-key ${{ inputs.pat }}
+      run: dotnet nuget push publish_folder/*.nupkg --source https://nuget.pkg.github.com/mdekok/index.json --api-key ${{ inputs.pat }}
