--- a/.github/workflows/build-test-pack-publish-nuget-package.yml
+++ b/.github/workflows/build-test-pack-publish-nuget-package.yml
@@ -14,9 +14,6 @@ jobs:
   build:
     runs-on: ubuntu-latest
 
-    env:
-      output_folder: ${{ github.workspace }}/output
-
     steps:
     - name: Check out
       uses: actions/checkout@v3
@@ -30,3 +27,4 @@ jobs:
       uses: mdekok/reusable/.github/actions/dotnet-pack-publish@main
       with:
         solution: ${{ inputs.solution }}
+        pat: $${{ secrets.pat }}
