--- a/.github/workflows/build-test-nuget-package.yml
+++ b/.github/workflows/build-test-nuget-package.yml
@@ -16,6 +16,6 @@ jobs:
       uses: actions/checkout@v3
 
     - name: Build and test
-      uses: mdekok/reusable/.github/actions/dotnet-build-test@main
+      uses: mdekok/reusable/.github/actions/dotnet-build-test@v1.0.0
       with:
         target: ${{ inputs.solution }}
