--- a/.github/workflows/bicep-linter.yml
+++ b/.github/workflows/bicep-linter.yml
@@ -16,4 +16,4 @@ jobs:
       uses: actions/checkout@v4
 
     - name: Linter
-      run: az bicep build --file ${{ inputs.solution }}
+      run: az bicep build --file ${{ inputs.filepath }}
