--- a/.github/workflows/bicep-linter.yml
+++ b/.github/workflows/bicep-linter.yml
@@ -8,12 +8,12 @@ on:
         type: string
         
 jobs:
-  build:
+  lint:
     runs-on: ubuntu-latest
 
     steps:
     - name: Check out
       uses: actions/checkout@v4
 
-    - name: Linter
+    - name: Lint
       run: az bicep build --file ${{ inputs.filepath }}
