--- a/.github/workflows/bicep-validator.yml
+++ b/.github/workflows/bicep-validator.yml
@@ -4,7 +4,7 @@ on:
   workflow_call:
     inputs:
       environment:
-        required: true
+#        required: true
         type: string
       location:
         default: 'westeurope'
@@ -14,7 +14,7 @@ on:
 jobs:
   validate:
     runs-on: ubuntu-latest
-    environment: ${{ inputs.environment }}
+#    environment: ${{ inputs.environment }}
 
     steps:
     - name: Check out
