--- a/.github/workflows/bicep-validator.yml
+++ b/.github/workflows/bicep-validator.yml
@@ -17,6 +17,7 @@ jobs:
 #    environment: ${{ inputs.environment }}
 
     steps:
+    - run: echo "Location ${{ inputs.Location }}"
     - name: Check out
       uses: actions/checkout@v4
 
