--- a/.github/workflows/bicep-deployment.yml
+++ b/.github/workflows/bicep-deployment.yml
@@ -1,4 +1,4 @@
-name: Deploy Bicep file
+name: Deployment Bicep file
 
 on:
   workflow_call:
@@ -15,7 +15,7 @@ on:
         type: string
         
 jobs:
-  what-if:
+  deploy:
     runs-on: ubuntu-latest
     environment: ${{ inputs.environment }}
 
@@ -34,7 +34,7 @@ jobs:
       with:
         azcliversion: 2.63.0 # See: https://github.com/Azure/azure-cli/issues/29828
         inlineScript: |
-          az deployment group ${{ inputs.environment }} \
+          az deployment group ${{ inputs.action }} \
             --template-file ${{ inputs.filepath }} \
             --resource-group ${{ vars.RESOURCE_GROUP }} \
             --parameters environment=${{ vars.LABEL }} location=${{ vars.LOCATION }}
