--- a/.github/workflows/bicep-deployment.yml
+++ b/.github/workflows/bicep-deployment.yml
@@ -23,13 +23,14 @@ jobs:
     - name: Check out
       uses: actions/checkout@v4
 
-    - uses: azure/login@v2
+    - name: Login Azure
+      uses: azure/login@v2
       with:
         client-id: ${{ secrets.AZURE_CLIENT_ID }}
         tenant-id: ${{ secrets.AZURE_TENANT_ID }}
         subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
 
-    - name: What-if deployment
+    - name: Deployment
       uses: azure/CLI@v2
       with:
         azcliversion: 2.63.0 # See: https://github.com/Azure/azure-cli/issues/29828
