--- a/.github/workflows/bicep-linter.yml
+++ b/.github/workflows/bicep-linter.yml
@@ -14,6 +14,8 @@ jobs:
     steps:
     - name: Check out
       uses: actions/checkout@v4
+      with:
+        submodules: true
 
     - name: Lint
       run: az bicep build --file ${{ inputs.filepath }}
