--- a/.github/workflows/bicep-deployment.yml
+++ b/.github/workflows/bicep-deployment.yml
@@ -40,4 +40,4 @@ jobs:
           az deployment group ${{ inputs.action }} \
             --template-file ${{ inputs.filepath }} \
             --resource-group ${{ vars.RESOURCE_GROUP }} \
-            --parameters environment=${{ vars.LABEL }} location=${{ vars.LOCATION }}
+            --parameters env=${{ vars.LABEL }} location=${{ vars.LOCATION }}
